Add TODO and fix code smells